--- a/src/css/main.css
+++ b/src/css/main.css
@@ -398,7 +398,7 @@ body {
 }
 
 .trial-label-cntr {
-  margin-left: 30px;
+  margin-left: 26px;
 }
 
 .trial-terms-link {
@@ -514,6 +514,7 @@ body {
 	z-index: 11;
 	width: 100%;
 	height: 100%;
+	display: none;
 }
 
 .pop-terms {
@@ -539,6 +540,7 @@ body {
 	z-index: 12;
 	margin-left: -248px;
 	margin-top: -148px;
+	display: none;
 }
 
 .pop-ele-car {
@@ -623,4 +625,38 @@ body {
 .pop-submit-success-p {
 	font-size: 14px;
 	color: #fff;
+}
+
+
+/* wechat分享弹框 */
+.social-item {
+	position: relative;
+}
+.share-box {
+	position: absolute;
+	top: -300px;
+	right: 0;
+	z-index: 11;
+	width: 500px;
+	height: 236px;
+	background: url(../img/share-box.png) center no-repeat;
+	display: none;
+}
+
+.share-code {
+	position: absolute;
+	top: 32px;
+	left: 32px;
+}
+.share-code img {
+	width: 175px;
+}
+.share-close {
+	position: absolute;
+	top: 52px;
+	right: 32px;
+	cursor: pointer;
+}
+.share-close img {
+	width: 25px;
 }
