--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,14 +1,13 @@
 @font-face {
   font-family: 'hyqihei60j';
-  src: url('hyqihei-60j-webfont.eot');
-  src: url('hyqihei-60j-webfont.eot?#iefix') format('embedded-opentype'), url('hyqihei-60j-webfont.woff2') format('woff2'), url('hyqihei-60j-webfont.woff') format('woff'), url('hyqihei-60j-webfont.ttf') format('truetype'), url('hyqihei-60j-webfont.svg#hyqihei60j') format('svg');
-  font-weight: bolder;
+  src: url('hyqihei-60j-webfont.ttf') format('truetype');
+  font-weight: normal;
   font-style: normal;
 }
 @font-face {
 	font-family: 'hyqihei40j';
 	src: url('hyqihei-40j-webfont.ttf') format('truetype');
-	font-weight: lighter;
+	font-weight: normal;
 	font-style: normal;
 }
 
@@ -99,7 +98,7 @@ body {
 
 .second-screen-title {
   font-size: 24px;
-  /* font-weight: bold; */
+  font-weight: bold;
 }
 
 .second-screen-main {
